Fix letter-spacing on Safari

--- a/css/sections/header.scss
+++ b/css/sections/header.scss
@@ -12,5 +12,6 @@
   margin: 0 auto 2em;
   font-family: $font-body;
   font-size: 1.2em;
+  letter-spacing: 0;
   color: $color-tertiary;
 }
