--- a/css/sections/main.scss
+++ b/css/sections/main.scss
@@ -66,6 +66,7 @@ $mq-grid-large:  64em;
   margin: 0 auto;
   font-family: $font-body;
   font-size: 1.3em;
+  letter-spacing: 0;
 }
 
 .food__image {
